# University-DM

./: KNN.ipynb  NaiveBayes.ipynb  files.py  pyproject.toml
.ipynb_checkpoints/: KNN-checkpoint.ipynb  NaiveBayes-checkpoint.ipynb
phase2/: Breast_cancer_data.csv  Untitled.ipynb  cardio_train.csv  decision_tree.ipynb  files.py  kmeans.ipynb  knn.ipynb  logistic_regression.ipynb  naive_bayes.ipynb  oneR.py  one_rule.ipynb
