[tool.poetry]
name = "datamining"
version = "0.1.0"
description = ""
authors = ["shanlialefkhani <shanli.alefkhani@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
jupyterlab = "^3.3.4"
jupyterlab-github = "^3.0.1"
scipy = "^1.8.0"
jupyterlab-tabnine = "^0.0.24"
pandas = "^1.4.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
